backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
spec:
  rules:
    - host: "35.240.254.240" # ใช้ External IP ของ Node ที่รัน Ingress Controller
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service # ชื่อของ Service ที่ต้องการ route ไป
                port:
                  number: 3000 # พอร์ตของ Service ที่ต้องการ route ไป
